<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            tools:context="com.xapo.test_project_darshna22.ui.details.DetailsFragment">

            <FrameLayout
                android:id="@+id/avatarFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_20sdp"
                    tools:ignore="ContentDescription"
                    tools:src="@android:drawable/picture_frame" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name">

                <TextView
                    android:id="@+id/stars"
                    style="@style/AppTheme.Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    app:drawableStartCompat="@drawable/ic_star"
                    app:drawableTint="@android:color/darker_gray"
                    tools:text="123" />

                <TextView
                    android:id="@+id/forks"
                    style="@style/AppTheme.Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    app:drawableStartCompat="@drawable/ic_fork"
                    app:drawableTint="@android:color/darker_gray"
                    tools:text="123" />

                <TextView
                    android:id="@+id/watchers"
                    style="@style/AppTheme.Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    app:drawableStartCompat="@drawable/ic_watchers"
                    app:drawableTint="@android:color/darker_gray"
                    tools:text="123" />

            </LinearLayout>

            <TextView
                android:id="@+id/name"
                style="@style/AppTheme.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avatarFrame"
                tools:text="kotlin-trending-repos-and-more" />

            <TextView
                android:id="@+id/username"
                style="@style/AppTheme.Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout"
                tools:text="darshna" />

            <TextView
                android:id="@+id/language"
                style="@style/AppTheme.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_circle"
                app:drawableTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username"
                tools:text="Kotlin" />

            <TextView
                android:id="@+id/description"
                style="@style/AppTheme.Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxLines="5"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language"
                tools:text="Android App that lists trending Kotlin Github repositories. Using MVVM, Paging 3 and Navigation Component." />

            <TextView
                android:id="@+id/create"
                style="@style/AppTheme.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:maxLines="5"
                android:text="@string/created_on"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/createDate"
                style="@style/AppTheme.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:maxLines="5"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/create"
                tools:text="12 Feb 2020" />

            <TextView
                android:id="@+id/update"
                style="@style/AppTheme.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxLines="5"
                android:text="@string/last_update"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/createDate" />

            <TextView
                android:id="@+id/updateDate"
                style="@style/AppTheme.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:maxLines="5"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/update"
                tools:text="12 Feb 2020" />

            <TextView
                android:id="@+id/issues"
                style="@style/AppTheme.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="5"
                android:text="@string/opened_issues"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/updateDate" />

            <TextView
                android:id="@+id/issuesOpened"
                style="@style/AppTheme.Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:maxLines="5"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/issues"
                tools:text="300" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="193dp" />

            <Button
                android:id="@+id/btnBrowse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:text="@string/open_browser"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/issuesOpened" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>